--- a/calculator.css
+++ b/calculator.css
@@ -1,1 +1,25 @@
-
+html, body{
+    height:100%;
+    width:100%;
+}
+#first_heading{
+    text-align:center;
+    color:red;
+}
+#second_heading{
+    text-align:center;
+    color:blueviolet;
+}
+table{
+    margin:auto;
+    background-color:black;
+    padding:10px;
+    border-radius:10px;
+}
+button{
+background-color:orange;
+width:50px; 
+height:50px;
+border-radius:20px;
+color:white;
+}
